[package]
name = "rt_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.11.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
http = "0.2"
futures = "0.3"
notify = "*"
libc = "0.2"
httparse = "1.8.0"